GNOME Bugzilla – Bug 676257
[0.11] x264: fails to build with 'x264_picture_t' has no member named 'i_dts'
Last modified: 2012-05-17 21:18:35 UTC
I'm trying to build after successfully installing gstreamer gstreamer-plugins-{good,base} 0.11.91. The build dies with: make[4]: Entering directory `/home/ronis/Project/notar/GNOME/garnome/geektoys/gst-plugins-ugly/work/main.d/gst-plugins-ugly-0.11.91/ext/x264' CC libgstx264_la-gstx264enc.lo gstx264enc.c: In function 'gst_x264_enc_chain': gstx264enc.c:1862:9: error: 'x264_picture_t' has no member named 'i_dts' gstx264enc.c: In function 'gst_x264_enc_encode_frame': gstx264enc.c:2031:3: error: 'x264_picture_t' has no member named 'i_dts' gstx264enc.c:2035:14: error: 'x264_picture_t' has no member named 'i_dts' gstx264enc.c:2038:39: error: 'x264_picture_t' has no member named 'i_dts' make[4]: *** [libgstx264_la-gstx264enc.lo] Error 1 make[4]: Leaving directory `/home/ronis/Project/notar/GNOME/garnome/geektoys/gst-plugins-ugly/work/main.d/gst-plugins-ugly-0.11.91/ext/x264' I'm running slackware13.37 with lots of additions/updates.
What's your version of x264? (see e.g. grep BUILD /usr/include/x264.h)
Those fields have been there for ages (ca. build 81 or so), hard to believe your x264 is *that* old... In any case: commit 004abdaddfbb209f4e2c23180a08d1589b654b33 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Thu May 17 21:12:18 2012 +0100 x264: bump x264 requirement to build 106 or later Build 106 is from September 2010. https://bugzilla.gnome.org/show_bug.cgi?id=676257 Please re-open if you still have issues with that.
It turns out that I'm using a locally installed x264 (BUILD 64). It was installed in 2008. Note that slackware doesn't come with one. I'll upgrade.
Upgrading to the latest x264 fixes the problem. Thanks