x264: bump x264 requirement to build 106 or later

Build 106 is from September 2010.

https://bugzilla.gnome.org/show_bug.cgi?id=676257